migrate to brax v2

--- a/scratch/a1_exp_brax_v1.ipynb
+++ b/scratch/a1_exp_brax_v1.ipynb
@@ -385,18 +385,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "3da16e9f-f56e-4960-8ca6-36969e07bbb5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "file_path = 'a1_ref_motion/trot.npy'\n",
     "rollout = np.load(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "ee451591-c63a-40c1-a230-ac5e83d1870e",
    "metadata": {},
    "outputs": [
@@ -406,7 +407,7 @@
        "(33, 182)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,14 +418,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "2d99d1ed-8a52-461d-b131-fa4daec627da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import brax\n",
+    "from brax.v1 import QP\n",
     "from jax import numpy as jnp\n",
-    "def deserialize_qp(nparray) -> brax.QP:\n",
+    "def deserialize_qp(nparray) -> QP:\n",
     "    \"\"\"\n",
     "    Get QP from a trajectory numpy array\n",
     "    \"\"\"\n",
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "id": "ced7eea3-e396-4a2a-aafc-d076caec2455",
    "metadata": {},
    "outputs": [],
@@ -450,17 +451,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "c0f6f444-54dc-471d-8912-efa4405c88dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(198, 14, 3)"
+       "(33, 14, 3)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,122 +472,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "id": "debe4858-c3c3-4c01-aa8b-6f0175bb2d09",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 0.00000000e+00,  0.00000000e+00,  4.30000007e-01],\n",
-       "        [ 1.82999998e-01, -4.69999984e-02,  4.30000007e-01],\n",
-       "        [ 1.82999998e-01, -1.32050008e-01,  4.30000007e-01],\n",
-       "        ...,\n",
-       "        [-1.82999998e-01,  1.32050008e-01,  4.30000007e-01],\n",
-       "        [-1.82999998e-01,  1.32050008e-01,  2.30000004e-01],\n",
-       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],\n",
-       "\n",
-       "       [[ 1.00316916e-04,  4.21822733e-06,  4.29954261e-01],\n",
-       "        [ 1.83102295e-01, -4.69879508e-02,  4.30069596e-01],\n",
-       "        [ 1.83105931e-01, -1.32037967e-01,  4.30073619e-01],\n",
-       "        ...,\n",
-       "        [-1.82905316e-01,  1.32046387e-01,  4.29866165e-01],\n",
-       "        [-1.84300900e-01,  1.32110357e-01,  2.29871035e-01],\n",
-       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],\n",
-       "\n",
-       "       [[ 2.72760342e-04,  1.11565705e-05,  4.29863662e-01],\n",
-       "        [ 1.83277845e-01, -4.69680168e-02,  4.30188805e-01],\n",
-       "        [ 1.83287486e-01, -1.32018030e-01,  4.30200934e-01],\n",
-       "        ...,\n",
-       "        [-1.82742149e-01,  1.32040292e-01,  4.29619491e-01],\n",
-       "        [-1.86510369e-01,  1.32230207e-01,  2.29655072e-01],\n",
-       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[ 6.85716942e-02,  6.01826459e-02,  3.92810553e-01],\n",
-       "        [ 2.11041242e-01, -6.22955263e-02,  4.12798643e-01],\n",
-       "        [ 1.74449414e-01, -1.32090300e-01,  4.44786608e-01],\n",
-       "        ...,\n",
-       "        [-3.58578674e-02,  2.56501317e-01,  3.54545563e-01],\n",
-       "        [-2.09767491e-01,  3.29671979e-01,  2.88201630e-01],\n",
-       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],\n",
-       "\n",
-       "       [[ 6.93693981e-02,  6.08856827e-02,  3.93957406e-01],\n",
-       "        [ 2.11103648e-01, -6.23776466e-02,  4.14342821e-01],\n",
-       "        [ 1.74157575e-01, -1.31700307e-01,  4.46944356e-01],\n",
-       "        ...,\n",
-       "        [-3.38454321e-02,  2.57820427e-01,  3.55619758e-01],\n",
-       "        [-2.06851035e-01,  3.31741452e-01,  2.87761420e-01],\n",
-       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],\n",
-       "\n",
-       "       [[ 7.01612532e-02,  6.15885518e-02,  3.95071596e-01],\n",
-       "        [ 2.11155921e-01, -6.24556877e-02,  4.15845096e-01],\n",
-       "        [ 1.73855513e-01, -1.31317168e-01,  4.49015558e-01],\n",
-       "        ...,\n",
-       "        [-3.18387188e-02,  2.59124666e-01,  3.56638521e-01],\n",
-       "        [-2.03899324e-01,  3.33718240e-01,  2.87133396e-01],\n",
-       "        [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00]]])"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "qp.pos"
+    "from brax.v1 import jumpy as jp\n",
+    "def _get_ref_state(step_idx) -> QP:\n",
+    "    mask = jp.where(step_idx == jp.arange(0, 33), jp.float32(1), jp.float32(0))\n",
+    "    ref_state = jp.tree_map(lambda x: (mask @ x.transpose(1, 0, 2)), qp)\n",
+    "    return ref_state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "id": "850e5d53-e41a-4409-aedb-f0782988ae12",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(198, 14, 4)"
+       "(14, 3)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qp.rot.shape"
+    "mask = jp.where(0 == jp.arange(0, 33), jp.float32(1), jp.float32(0))\n",
+    "(mask @ qp.pos.transpose(1, 0, 2)).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "id": "fc7a4001-571c-4962-979e-1be609cde897",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(198, 14, 3)"
+       "(14, 33, 3)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qp.ang.shape"
+    "qp.pos.transpose(1, 0, 2).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "247f24e9-0624-4e2c-bdab-a8c23ad9f7a8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(1., dtype=float32)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jp.where(0.6 > 0.4, jp.float32(1), jp.float32(0))"
+   ]
   },
   {
    "cell_type": "code",
