--- a/scratch/a1_exp_brax_v2.ipynb
+++ b/scratch/a1_exp_brax_v2.ipynb
@@ -29,8 +29,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03bb3998-90ca-4842-a48c-df9d2284bb9c",
+   "metadata": {},
+   "source": [
+    "## With interpolation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "9a99a417-67bb-48ed-88f6-dcedc2218e5d",
    "metadata": {},
    "outputs": [],
@@ -44,23 +52,65 @@
     "from brax.io import html\n",
     "import json\n",
     "import numpy as np\n",
-    "\n",
-    "TF_CPP_MIN_LOG_LEVEL=0"
+    "import copy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "9435b8f8-47c5-40cf-a754-18c5e1072702",
+   "execution_count": 2,
+   "id": "efe6c93b-1c00-4e66-b18c-a537c5ddfe21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.interpolate import CubicSpline"
+    "def standardize_quaternion(quat):\n",
+    "    mask = quat[..., -1] < 0\n",
+    "    quat[mask] = -quat[mask]\n",
+    "    return quat\n",
+    "\n",
+    "def quat_slerp(quat0, quat1, fraction, spin=0, shortestpath=True, eps=1e-6):\n",
+    "    if isinstance(fraction, (int, float)):\n",
+    "        fraction = np.array([fraction])\n",
+    "    batch_size = quat0.shape[0]\n",
+    "    q = np.zeros_like(quat0)\n",
+    "    q0 = quat0[..., :4] / \\\n",
+    "        np.linalg.norm(quat0[..., :4], axis=-1).reshape([batch_size, 1])\n",
+    "    q1 = quat1[..., :4] / \\\n",
+    "        np.linalg.norm(quat1[..., :4], axis=-1).reshape([batch_size, 1])\n",
+    "    fraction_zero = np.squeeze(fraction == 0.0)\n",
+    "    fraction_one = np.squeeze(fraction == 1.0)\n",
+    "    mask = np.logical_and(\n",
+    "        np.logical_not(fraction_zero),\n",
+    "        np.logical_not(fraction_one)\n",
+    "    )\n",
+    "    q[fraction_zero] = q0[fraction_zero]\n",
+    "    q[fraction_one] = q1[fraction_one]\n",
+    "    d = np.squeeze(np.matmul(q0.reshape([-1, 1, q0.shape[1]]),\n",
+    "                                q1.reshape([-1, q1.shape[1], 1])))\n",
+    "    d[np.logical_not(mask)] = 0.0  # set to dummy value\n",
+    "    q[np.logical_and(mask, abs(abs(d) - 1.0) < eps)\n",
+    "    ] = q0[np.logical_and(mask, abs(abs(d) - 1.0) < eps)]\n",
+    "    mask = np.logical_and(\n",
+    "        mask,\n",
+    "        abs(abs(d) - 1.0) >= eps\n",
+    "    )\n",
+    "    d = d[mask]\n",
+    "    if shortestpath:\n",
+    "        # invert rotation\n",
+    "        d[d < 0.0] = -d[d < 0.0]\n",
+    "        q1[mask][d < 0.0] *= -1.0\n",
+    "    d = d.reshape([-1, 1])\n",
+    "    angle = np.arccos(d) + spin * np.pi\n",
+    "    isin = 1.0 / np.sin(angle)\n",
+    "    q0[mask] *= np.sin((1.0 - fraction[mask]) * angle) * isin\n",
+    "    q1[mask] *= np.sin(fraction[mask] * angle) * isin\n",
+    "    q0[mask] += q1[mask]\n",
+    "    q[mask] = q0[mask]\n",
+    "    return q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "fb586300-f85d-43e4-9f06-a4014db50b24",
    "metadata": {},
    "outputs": [],
@@ -73,17 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "f848f92e-2c87-49c1-867a-9ede692edcfa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33"
+       "(33, 19)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,103 +143,66 @@
     "with open(file, 'r') as f:\n",
     "    data = json.load(f)\n",
     "frames = data['Frames']\n",
-    "len(frames)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "36e60821-8d07-4752-a728-5b8637f23ce4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array([-0.04085, -0.00562,  0.03923,  0.06805,  0.0373 ], dtype=float32)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "frames = jp.array(frames)\n",
-    "frames = frames[:, 7:]\n",
-    "frames[:5,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "21789b27-20c5-48e0-a9dd-aa6dcac88ea4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frames = frames.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "9190d8d9-b235-4443-81f3-6a993b7ea35b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time_points = jp.arange(frames.shape[1])\n",
-    "splines = [CubicSpline(time_points, frames[joint]) for joint in range(12)]\n",
-    "inter = 6\n",
-    "fine_time = jp.linspace(time_points.min(), time_points.max(), len(time_points)*inter)\n",
-    "interpolated_data = jp.array([spline(fine_time) for spline in splines])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "7910c252-47d6-4568-af6b-c5e23c110474",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(198, 12)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "frames = interpolated_data.T\n",
+    "frames = np.array(frames)\n",
     "frames.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "71542eb0-05ac-4df9-8172-1c082dcfc9b1",
+   "execution_count": 5,
+   "id": "72c9abd8-38f9-455b-b078-0bc6a5667135",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interpolated_frames = []\n",
+    "for i in range(frames.shape[0]-1):\n",
+    "    frame0, frame1 = frames[i], frames[i+1]\n",
+    "    root_pos0 = frame0[0:3]\n",
+    "    root_pos1 = frame1[0:3]\n",
+    "    root_rot0 = frame0[3:7]\n",
+    "    root_rot1 = frame1[3:7]\n",
+    "    joints0 = frame0[7:19]\n",
+    "    joints1 = frame1[7:19]\n",
+    "    _root_rot0 = root_rot0[np.newaxis, ...]\n",
+    "    _root_rot1 = root_rot1[np.newaxis, ...]\n",
+    "    interpolated_frames.append(frame0)\n",
+    "    for j in range(1,10):\n",
+    "        blend = j / 10\n",
+    "        blend_root_pos = (1.0 - blend) * root_pos0 + blend * root_pos1\n",
+    "        blend_joints = (1.0 - blend) * joints0 + blend * joints1\n",
+    "        blend_root_rot = quat_slerp(_root_rot0, _root_rot1, blend)\n",
+    "        blend_root_rot /= np.linalg.norm(blend_root_rot, axis=-1).reshape([blend_root_rot.shape[0], 1])\n",
+    "        blend_root_rot = standardize_quaternion(blend_root_rot)[0]\n",
+    "        blend_root_rot = np.round(blend_root_rot, decimals=5)\n",
+    "        interpolated_frames.append(np.hstack((blend_root_pos, blend_root_rot, blend_joints)))\n",
+    "interpolated_frames.append(frame1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2a7b9457-ce2d-4b6f-9cb8-6a731661c884",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Array([-0.04085   , -0.03612936, -0.03097054, -0.02540927, -0.01948133,\n",
-       "       -0.01322246, -0.00666841,  0.00014505], dtype=float32)"
+       "(321, 19)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "frames[:8,0]"
+    "interpolated_frames = np.array(interpolated_frames)\n",
+    "interpolated_frames.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "bb6e120e-11cc-4b1f-a80b-e3fbe22730f1",
    "metadata": {},
    "outputs": [],
@@ -197,19 +210,17 @@
     "jit_env_reset = jax.jit(pipeline.init)\n",
     "jit_env_step = jax.jit(pipeline.step)\n",
     "\n",
-    "rollout = []\n",
     "rng = jax.random.PRNGKey(seed=1)\n",
-    "state = jit_env_reset(m, m.init_q, jp.zeros(m.qd_size()))\n",
-    "for frame in frames:\n",
-    "    rollout.append(state)\n",
-    "    act = jp.array(frame)\n",
-    "    # print(act)\n",
-    "    state = jit_env_step(m, state, act)"
+    "rollout = []\n",
+    "for frame in interpolated_frames:\n",
+    "    frame[3], frame[6] = frame[6], frame[3]\n",
+    "    state = jit_env_reset(m, frame, jp.zeros(m.qd_size()))\n",
+    "    rollout.append(state)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "7bc5fb48-5a2d-4e11-a415-7c4a003298c1",
    "metadata": {
     "scrolled": true
@@ -221,43 +232,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "227a20a2-117b-4e08-aa1c-5249a150ae80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dir(rollout[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "61496923-c948-4897-a760-5e7338e5d4d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rollout[0].x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "5518c752-3bec-4ebd-a8f6-6394a8efa50d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rollout[0].xd"
+    "# serialize data, positional:\n",
+    "data = []\n",
+    "for roll in rollout:\n",
+    "    QP = np.hstack((\n",
+    "        roll.q, \n",
+    "        roll.qd, \n",
+    "        roll.x.pos.flatten(), \n",
+    "        roll.x.rot.flatten(), \n",
+    "        roll.xd.vel.flatten(), \n",
+    "        roll.xd.ang.flatten(),\n",
+    "        roll.x_i.pos.flatten(), \n",
+    "        roll.x_i.rot.flatten(), \n",
+    "        roll.xd_i.vel.flatten(), \n",
+    "        roll.xd_i.ang.flatten(),\n",
+    "        roll.j.pos.flatten(), \n",
+    "        roll.j.rot.flatten(), \n",
+    "        roll.jd.vel.flatten(), \n",
+    "        roll.jd.ang.flatten(),\n",
+    "        roll.a_p.pos.flatten(), \n",
+    "        roll.a_p.rot.flatten(), \n",
+    "        roll.a_c.pos.flatten(), \n",
+    "        roll.a_c.rot.flatten(),\n",
+    "        roll.mass\n",
+    "    ))\n",
+    "    data.append(QP)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e3c42cde-fb1e-4a63-9811-040b1aea5a50",
+   "id": "61496923-c948-4897-a760-5e7338e5d4d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(321, 739)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = np.array(data)\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5518c752-3bec-4ebd-a8f6-6394a8efa50d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# state = jit_env_reset(m, m.init_q, jp.zeros(m.qd_size()))\n",
-    "# # HTML(html.render(m, [state]))"
+    "np.save('a1_ref_motion/trot.npy', data)"
    ]
   },
   {
@@ -265,7 +301,7 @@
    "id": "428505fc-2e52-40d3-a2f9-cd2d71a597e5",
    "metadata": {},
    "source": [
-    "## Trot.txt"
+    "## No interpolation"
    ]
   },
   {
@@ -391,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "aa7f736f-8ad5-4c42-95ae-3d939c3fab6f",
    "metadata": {},
    "outputs": [],
@@ -425,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "7aff928e-4cdf-4aff-9bef-99d1f09396a5",
    "metadata": {},
    "outputs": [
@@ -435,7 +471,7 @@
        "(33, 739)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "91d5998c-bc01-47aa-a994-64ec03b38df0",
    "metadata": {},
    "outputs": [],
@@ -643,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "6795e491-c75f-4f0f-b89f-064375d74d06",
    "metadata": {},
    "outputs": [],
@@ -652,12 +688,33 @@
     "    config = file.read()\n",
     "\n",
     "m = mjcf.loads(config, asset_path='')\n",
-    "# m = m.replace(dt=0.02) "
+    "m = m.replace(dt=0.02) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
+   "id": "dd613233-cad7-4a26-9d95-538bbc95d999",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "6bb6d8db-3119-45d1-bdb5-5881e11c008c",
    "metadata": {},
    "outputs": [],
@@ -668,7 +725,7 @@
     "rollout = []\n",
     "rng = jax.random.PRNGKey(seed=1)\n",
     "state = jit_env_reset(m, m.init_q, jp.zeros(m.qd_size()))\n",
-    "for i in range(1000):\n",
+    "for i in range(100):\n",
     "    rollout.append(state)\n",
     "    act = 10 * jp.sin(i / 100) * jp.ones(m.act_size())\n",
     "    # act = jp.zeros(m.act_size())\n",
@@ -677,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "215ce10e-1fc3-493d-934e-1b6f351cff33",
    "metadata": {},
    "outputs": [],
