--- a/scratch/a1_exp_brax_v2.ipynb
+++ b/scratch/a1_exp_brax_v2.ipynb
@@ -382,12 +382,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "f7e8cb42-85b9-440e-a3d1-5878c2d65d0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# HTML(html.render(m, rollout))"
+    "# HTML(html.render(m.replace(dt=0.02), rollout))"
    ]
   },
   {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "aa7f736f-8ad5-4c42-95ae-3d939c3fab6f",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "7aff928e-4cdf-4aff-9bef-99d1f09396a5",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
        "(33, 739)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "91d5998c-bc01-47aa-a994-64ec03b38df0",
    "metadata": {},
    "outputs": [],
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "6795e491-c75f-4f0f-b89f-064375d74d06",
    "metadata": {},
    "outputs": [],
@@ -688,101 +688,138 @@
     "    config = file.read()\n",
     "\n",
     "m = mjcf.loads(config, asset_path='')\n",
-    "m = m.replace(dt=0.02) "
+    "# m = m.replace(dt=0.02) # default is 0.002"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "dd613233-cad7-4a26-9d95-538bbc95d999",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.02"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m.dt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "6bb6d8db-3119-45d1-bdb5-5881e11c008c",
+   "execution_count": 4,
+   "id": "e53706ce-3b24-4d54-8b5a-51f147e9a9d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "jit_env_reset = jax.jit(pipeline.init)\n",
-    "jit_env_step = jax.jit(pipeline.step)\n",
-    "\n",
-    "rollout = []\n",
-    "rng = jax.random.PRNGKey(seed=1)\n",
-    "state = jit_env_reset(m, m.init_q, jp.zeros(m.qd_size()))\n",
-    "for i in range(100):\n",
-    "    rollout.append(state)\n",
-    "    act = 10 * jp.sin(i / 100) * jp.ones(m.act_size())\n",
-    "    # act = jp.zeros(m.act_size())\n",
-    "    state = jit_env_step(m, state, act)"
+    "jit_env_step = jax.jit(pipeline.step)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "215ce10e-1fc3-493d-934e-1b6f351cff33",
+   "execution_count": 5,
+   "id": "74858d7e-fc9c-4f29-b68b-24d304c81966",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# HTML(html.render(m, rollout))"
+    "from brax.envs import base\n",
+    "class A1Mimic(base.PipelineEnv):\n",
+    "    def __init__(self):\n",
+    "        self.sys = mjcf.loads(config, asset_path='')\n",
+    "        # self.sys = sys.replace(dt=0.02)\n",
+    "        super().__init__(sys=self.sys, backend='positional', n_frames=10)\n",
+    "\n",
+    "    def reset(self):\n",
+    "        return super().pipeline_init(self.sys.init_q, jp.zeros(self.sys.qd_size()))\n",
+    "\n",
+    "    def step(self, state, action: jp.ndarray):\n",
+    "        return super().pipeline_step(state, action)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f13ffc87-fc16-4230-8378-9bc3a9d836f5",
+   "id": "0e4ea2f6-2f78-4836-a5a5-1bd0b74e0725",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array([0.  , 0.  , 0.43, 1.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ,\n",
-       "       0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  , 0.  ], dtype=float32)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "m.init_q"
+    "a1 = A1Mimic()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c8075301-125e-4ba8-991c-41924071f70d",
+   "execution_count": 9,
+   "id": "a52054d1-8859-4c4b-8b48-4763b9d07d0a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "brax.base.System"
+       "Array(0.02, dtype=float32, weak_type=True)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(m)"
+    "a1.dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1787d517-548a-4d5b-8aa2-9cd56c6e7b47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rollout = []\n",
+    "rng = jax.random.PRNGKey(seed=1)\n",
+    "state = a1.reset()\n",
+    "for i in range(2):\n",
+    "    act = jp.array([0, 0.5, -1.5, 0, 0.5, -1.5, 0, 0.5, -1.2, 0, 0.5, -1.2]) # target angle\n",
+    "    state = a1.step(state, act)\n",
+    "    rollout.append(state)\n",
+    "rollout.append(state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "82e71796-2ce3-4ee2-9bf2-53d2543d6902",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# HTML(html.render(a1.sys.replace(dt=0.02), rollout))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "6bb6d8db-3119-45d1-bdb5-5881e11c008c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "rollout = []\n",
+    "rng = jax.random.PRNGKey(seed=1)\n",
+    "state = a1.reset()\n",
+    "for i in range(1):\n",
+    "    print(i)\n",
+    "    # print(jp.round(state.q[7:], decimals=1))\n",
+    "    rollout.append(state)\n",
+    "    # act = 10 * jp.sin(i / 100) * jp.ones(m.act_size())\n",
+    "    # act = jp.array([0, 0.9, -1.8, 0, 0.9, -1.8, 0, 0.9, -1.8, 0, 0.9, -1.8])\n",
+    "    act = jp.array([0, 0.5, -1.5, 0, 0.5, -1.5, 0, 0.5, -1.2, 0, 0.5, -1.2]) # target angle\n",
+    "    state = a1.step(state, act)\n",
+    "rollout.append(state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "215ce10e-1fc3-493d-934e-1b6f351cff33",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# HTML(html.render(m, rollout))"
    ]
   },
   {
@@ -797,6 +834,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9261f47c-ac33-49dd-a4fc-d4cb4e7146a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c53902d8-4e60-4267-a121-a6700d04fd4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da0b6620-8f04-4b19-9e80-b147fa708e53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8081a5d-34fb-48b2-967b-266c80da122b",
    "metadata": {},
    "outputs": [],
    "source": []
