modify file names

--- a/scratch/a1_exp_brax_v2.ipynb
+++ b/scratch/a1_exp_brax_v2.ipynb
@@ -640,7 +640,9 @@
     "from IPython.display import HTML, clear_output\n",
     "import jax\n",
     "from jax import numpy as jp\n",
-    "from brax.io import html"
+    "from brax.io import html\n",
+    "import json\n",
+    "import numpy as np"
    ]
   },
   {
@@ -653,8 +655,33 @@
     "with open('a1_mjcf.txt', 'r') as file:\n",
     "    config = file.read()\n",
     "\n",
-    "m = mjcf.loads(config, asset_path='')\n",
-    "# m = m.replace(dt=0.02) # default is 0.002"
+    "m = mjcf.loads(config, asset_path='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "16e480f1-b04d-47a2-9d44-ef8be64e01ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(33, 19)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = 'a1_origin_motions/trot.txt'\n",
+    "with open(file, 'r') as f:\n",
+    "    data = json.load(f)\n",
+    "frames = data['Frames']\n",
+    "frames = np.array(frames)\n",
+    "frames.shape"
    ]
   },
   {
@@ -665,136 +692,145 @@
    "outputs": [],
    "source": [
     "jit_env_reset = jax.jit(pipeline.init)\n",
-    "jit_env_step = jax.jit(pipeline.step)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "74858d7e-fc9c-4f29-b68b-24d304c81966",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from brax.envs import base\n",
-    "class A1Mimic(base.PipelineEnv):\n",
-    "    def __init__(self):\n",
-    "        self.sys = mjcf.loads(config, asset_path='')\n",
-    "        # self.sys = sys.replace(dt=0.02)\n",
-    "        super().__init__(sys=self.sys, backend='positional', n_frames=10)\n",
+    "jit_env_step = jax.jit(pipeline.step)\n",
     "\n",
-    "    def reset(self):\n",
-    "        return super().pipeline_init(self.sys.init_q, jp.zeros(self.sys.qd_size()))\n",
-    "\n",
-    "    def step(self, state, action: jp.ndarray):\n",
-    "        return super().pipeline_step(state, action)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "0e4ea2f6-2f78-4836-a5a5-1bd0b74e0725",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a1 = A1Mimic()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a52054d1-8859-4c4b-8b48-4763b9d07d0a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Array(0.02, dtype=float32, weak_type=True)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a1.dt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "1787d517-548a-4d5b-8aa2-9cd56c6e7b47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "rollout = []\n",
-    "rng = jax.random.PRNGKey(seed=1)\n",
-    "state = a1.reset()\n",
-    "for i in range(2):\n",
-    "    act = jp.array([0, 0.5, -1.5, 0, 0.5, -1.5, 0, 0.5, -1.2, 0, 0.5, -1.2]) # target angle\n",
-    "    state = a1.step(state, act)\n",
-    "    rollout.append(state)\n",
-    "rollout.append(state)"
+    "for frame in frames:\n",
+    "    frame[3], frame[4], frame[5], frame[6] = frame[6], frame[3], frame[4], frame[5]\n",
+    "    state = jit_env_reset(m, frame, jp.zeros(m.qd_size()))\n",
+    "    rollout.append(state)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "82e71796-2ce3-4ee2-9bf2-53d2543d6902",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# HTML(html.render(a1.sys.replace(dt=0.02), rollout))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "6bb6d8db-3119-45d1-bdb5-5881e11c008c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "rollout = []\n",
-    "rng = jax.random.PRNGKey(seed=1)\n",
-    "state = a1.reset()\n",
-    "for i in range(1):\n",
-    "    print(i)\n",
-    "    # print(jp.round(state.q[7:], decimals=1))\n",
-    "    rollout.append(state)\n",
-    "    # act = 10 * jp.sin(i / 100) * jp.ones(m.act_size())\n",
-    "    # act = jp.array([0, 0.9, -1.8, 0, 0.9, -1.8, 0, 0.9, -1.8, 0, 0.9, -1.8])\n",
-    "    act = jp.array([0, 0.5, -1.5, 0, 0.5, -1.5, 0, 0.5, -1.2, 0, 0.5, -1.2]) # target angle\n",
-    "    state = a1.step(state, act)\n",
-    "rollout.append(state)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "215ce10e-1fc3-493d-934e-1b6f351cff33",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# HTML(html.render(m, rollout))"
+    "# HTML(html.render(m.replace(dt=0.02), rollout))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4dfd237a-c333-4f70-bd27-d0ddd08af5f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##############\n",
+      "x:  [ 0.18191518 -0.04957257  0.27236554]\n",
+      "x_i:  [ 0.17860422 -0.05015999  0.2726092 ]\n",
+      "##############\n",
+      "x:  [ 0.20841482 -0.0490937   0.27470222]\n",
+      "x_i:  [ 0.20510292 -0.04967487  0.27494806]\n",
+      "##############\n",
+      "x:  [ 0.23557611 -0.04798787  0.27869317]\n",
+      "x_i:  [ 0.23226441 -0.04856617  0.2789485 ]\n",
+      "##############\n",
+      "x:  [ 0.26335275 -0.0462454   0.28394777]\n",
+      "x_i:  [ 0.26004317 -0.04682649  0.28422335]\n",
+      "##############\n",
+      "x:  [ 0.29120255 -0.04406855  0.29027647]\n",
+      "x_i:  [ 0.28789848 -0.04465513  0.2906019 ]\n",
+      "##############\n",
+      "x:  [ 0.3183862  -0.04289284  0.2967926 ]\n",
+      "x_i:  [ 0.31508198 -0.04347625  0.2971223 ]\n",
+      "##############\n",
+      "x:  [ 0.34479445 -0.04328226  0.30230114]\n",
+      "x_i:  [ 0.34148377 -0.04385117  0.30258876]\n",
+      "##############\n",
+      "x:  [ 0.37035996 -0.04421656  0.30594927]\n",
+      "x_i:  [ 0.36704627 -0.04477324  0.30622578]\n",
+      "##############\n",
+      "x:  [ 0.3951576  -0.04500451  0.3067987 ]\n",
+      "x_i:  [ 0.3918441  -0.0455629   0.30707398]\n",
+      "##############\n",
+      "x:  [ 0.41981906 -0.04631056  0.30477223]\n",
+      "x_i:  [ 0.41650566 -0.04687622  0.3050338 ]\n",
+      "##############\n",
+      "x:  [ 0.44473144 -0.04801368  0.29981676]\n",
+      "x_i:  [ 0.44141856 -0.04858642  0.30006912]\n",
+      "##############\n",
+      "x:  [ 0.46953607 -0.04929614  0.29359922]\n",
+      "x_i:  [ 0.46622348 -0.04987465  0.2938423 ]\n",
+      "##############\n",
+      "x:  [ 0.49368006 -0.05014179  0.28749537]\n",
+      "x_i:  [ 0.49036703 -0.05072453  0.2877213 ]\n",
+      "##############\n",
+      "x:  [ 0.5174906  -0.05150821  0.28185117]\n",
+      "x_i:  [ 0.5141762  -0.05208798  0.28206402]\n",
+      "##############\n",
+      "x:  [ 0.5410757  -0.05452568  0.27681345]\n",
+      "x_i:  [ 0.5377571  -0.0550874   0.27700853]\n",
+      "##############\n",
+      "x:  [ 0.5641199  -0.05849544  0.2750819 ]\n",
+      "x_i:  [ 0.56079537 -0.05903212  0.275245  ]\n",
+      "##############\n",
+      "x:  [ 0.58613926 -0.06313857  0.2744201 ]\n",
+      "x_i:  [ 0.5828096  -0.06364672  0.27456874]\n",
+      "##############\n",
+      "x:  [ 0.6076108  -0.06856997  0.27414256]\n",
+      "x_i:  [ 0.6042773  -0.06905009  0.27429777]\n",
+      "##############\n",
+      "x:  [ 0.6298295  -0.07521547  0.27597615]\n",
+      "x_i:  [ 0.6264929  -0.07567085  0.27613908]\n",
+      "##############\n",
+      "x:  [ 0.6536786  -0.08121465  0.27873033]\n",
+      "x_i:  [ 0.65034187 -0.08166568  0.27890238]\n",
+      "##############\n",
+      "x:  [ 0.6788258  -0.08717817  0.2821278 ]\n",
+      "x_i:  [ 0.67548984 -0.08763184  0.2823078 ]\n",
+      "##############\n",
+      "x:  [ 0.7048427  -0.09267521  0.2857771 ]\n",
+      "x_i:  [ 0.70150834 -0.09313726  0.2859659 ]\n",
+      "##############\n",
+      "x:  [ 0.730832   -0.09747458  0.2890543 ]\n",
+      "x_i:  [ 0.72749966 -0.09794738  0.28925171]\n",
+      "##############\n",
+      "x:  [ 0.75601864 -0.10156164  0.29099286]\n",
+      "x_i:  [ 0.7526878  -0.1020413   0.29119882]\n",
+      "##############\n",
+      "x:  [ 0.7799674  -0.10526938  0.29058146]\n",
+      "x_i:  [ 0.77663666 -0.10574558  0.29079658]\n",
+      "##############\n",
+      "x:  [ 0.8029587  -0.10881858  0.28827232]\n",
+      "x_i:  [ 0.7996264  -0.10928144  0.28849205]\n",
+      "##############\n",
+      "x:  [ 0.8255061  -0.11209998  0.28475007]\n",
+      "x_i:  [ 0.82217216 -0.11254805  0.28497615]\n",
+      "##############\n",
+      "x:  [ 0.8476199  -0.11488711  0.28112024]\n",
+      "x_i:  [ 0.8442847  -0.11532477  0.2813486 ]\n",
+      "##############\n",
+      "x:  [ 0.86902815 -0.11705662  0.27840713]\n",
+      "x_i:  [ 0.8656923  -0.11748936  0.2786352 ]\n",
+      "##############\n",
+      "x:  [ 0.88949615 -0.11888392  0.27675125]\n",
+      "x_i:  [ 0.8861593  -0.11931445  0.2769678 ]\n",
+      "##############\n",
+      "x:  [ 0.90951073 -0.1198148   0.2752284 ]\n",
+      "x_i:  [ 0.90617454 -0.12025085  0.27544463]\n",
+      "##############\n",
+      "x:  [ 0.92943776 -0.12035279  0.2747307 ]\n",
+      "x_i:  [ 0.9261019  -0.12079533  0.27493855]\n",
+      "##############\n",
+      "x:  [ 0.9492302  -0.12106982  0.2762825 ]\n",
+      "x_i:  [ 0.94589305 -0.121511    0.27647105]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for state in rollout:\n",
+    "    print(\"##############\")\n",
+    "    print(\"x: \", state.x.pos[1])\n",
+    "    print(\"x_i: \", state.x_i.pos[1])    "
+   ]
   },
   {
    "cell_type": "code",
